created auth apis

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "color-scaning",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
@@ -16,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/ujjwal060/color-scaning/issues"
   },
-  "homepage": "https://github.com/ujjwal060/color-scaning#readme"
+  "homepage": "https://github.com/ujjwal060/color-scaning#readme",
+  "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.879.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.0",
+    "nodemailer": "^7.0.6"
+  }
 }
