--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ujjwal060/color-scaning#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.882.0",
     "@aws-sdk/client-secrets-manager": "^3.879.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -27,6 +28,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6"
   }
 }
