--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
+NODE_ENV=production
 DB_URI=mongodb+srv://anuragyadav:4MttGnaem1H6sskw@cluster0.mpumx.mongodb.net/myAppDB?retryWrites=true&w=majority&appName=Cluster0
 PORT=7878
 EMAIL_USER=anurag777222111@gmail.com
 EMAIL_PASS= fdfg shxl kruc zwzv
 ACCESS_TOKEN_SECRET=ACCESS_TOKEN_SECRET
+S3_BUCKET=bucket-rtyu
 
 JWT_SECRET=verysecretkey
