--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ EMAIL_USER=anurag777222111@gmail.com
 EMAIL_PASS= fdfg shxl kruc zwzv
 ACCESS_TOKEN_SECRET=ACCESS_TOKEN_SECRET
 AWS_S3_BUCKET_NAME=invoice-bucket-rtyu
-SECRET_NAME=alex-src
+SECRET_NAME=color-secret
 JWT_SECRET=verysecretkey
+AWS_REGION=us-east-1
