--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.6"
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.6",
+    "stripe": "^18.5.0"
   }
 }
