added refresh token for admin and user

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ PORT=7878
 EMAIL_USER=anurag777222111@gmail.com
 EMAIL_PASS= fdfg shxl kruc zwzv
 ACCESS_TOKEN_SECRET=ACCESS_TOKEN_SECRET
+"REFRESH_TOKEN_SECRET"="REFRESH_COLOR"
 AWS_S3_BUCKET_NAME=invoice-bucket-rtyu
 SECRET_NAME=color-secret
 JWT_SECRET=verysecretkey
